# Forevue

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py  student_scope.py
apps/api/app/core/: audit.py  config.py  db.py  exceptions.py  kv.py  logging.py  middleware.py  rate_limit.py  refresh_tokens.py  rls.py  security.py  storage.py
apps/api/app/models/: __init__.py  audit.py  base.py  canonical.py  conflict.py  faculty_workspace.py  identity.py  ingestion.py  placement.py  risk.py  tenant.py  user.py
apps/api/app/repositories/: base.py  faculty_scope_repository.py  risk_repository.py  tenant_repository.py  user_repository.py
apps/api/app/schemas/: ai.py  auth.py  faculty.py  imports.py  mappings.py  placement.py  risk.py  sources.py  student_dashboard.py  students.py  users.py
apps/api/app/services/: auth_service.py  faculty_dashboard_service.py  user_service.py  (+2 more)
apps/api/migrations/: env.py
apps/api/scripts/: seed_demo.py
apps/api/tests/: conftest.py  test_ai_eval.py  test_ai_plane.py  test_faculty_dashboard.py  test_hardening.py  test_health_and_auth.py  test_ingestion_pipeline.py  test_normalizers.py  test_resolver.py  test_risk_api.py  test_risk_engine.py  test_risk_interventions.py  test_risk_minor_handling.py  test_risk_rules.py  test_risk_scoring.py  test_risk_signals.py  test_risk_summary.py  test_rls_coverage.py  test_rls_isolation.py  test_student_dashboard.py  test_student_scope.py
(+420 files in other folders)
