[project]
name = "forevue-api"
version = "0.1.0"
description = "Forevue — backend API (Phase 7: AI plane — semantic layer, gateway, tool calling)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pyjwt==2.10.1",
    "argon2-cffi==23.1.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "rapidfuzz==3.10.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "testcontainers[postgres]==4.9.0",
]
dev = [
    "mypy==1.13.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
